--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -198,9 +198,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec8a3bd4",
+   "metadata": {},
+   "source": [
+    "## Single number \n",
+    "\n",
+    "\n",
+    "## Given a non-empty array of integers nums, every element appears twice except for one. Find that single one. You must implement a solution with a linear runtime complexity and use only constant extra space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f345d4fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def singleNumber(nums):\n",
+    "    d = {}\n",
+    "    \n",
+    "    for i in nums:\n",
+    "        if i in d:\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    \n",
+    "    key_list = list(d.keys())\n",
+    "    val_list = list(d.values())\n",
+    "    position = val_list.index(min(d.values()))\n",
+    "    return key_list[position]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6cb837b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2,2,2,3,4,3,3,4,5]\n",
+    "singleNumber(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9867d629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#best solution \n",
+    "\n",
+    "# def singleNumber(self, nums):\n",
+    "#         \"\"\"\n",
+    "#         :type nums: List[int]\n",
+    "#         :rtype: int\n",
+    "#         \"\"\"\n",
+    "        \n",
+    "#         a = 0\n",
+    "#         for num in nums:\n",
+    "#             a ^= num\n",
+    "#         return a\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca81e2c",
+   "metadata": {},
+   "source": [
+    "## Product of Array Except Self\n",
+    "\n",
+    "### Given an integer array nums, return an array answer such that answer[i] is equal to the product of all the elements of nums except nums[i].\n",
+    "\n",
+    "### The product of any prefix or suffix of nums is guaranteed to fit in a 32-bit integer.\n",
+    "\n",
+    "### You must write an algorithm that runs in O(n) time and without using the division operation.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "143461e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def productExceptSelf(nums):\n",
+    "    ans = []\n",
+    "    prod = 1 \n",
+    "    for i in range(len(nums)-1):\n",
+    "        prod *= nums[i+1]\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "09583e1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [5,6,2,3,4]\n",
+    "productExceptSelf(nums)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1cc8748",
+   "id": "b4e178f8",
    "metadata": {},
    "outputs": [],
    "source": []
